Fix positioning of h1 on mobile

--- a/style.css
+++ b/style.css
@@ -43,7 +43,7 @@
              width: 100%;
          
          }
-         h1{
+         h1, .firstword{
              margin: 0;
             font-size:60px  !important;
             padding-left: 10px !important;
